# komodo151

./: .demo_log.txt  .gitignore  README.md
ShapeContext/LAPJV/: LAP.CPP
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/src/cupinator/: CMakeLists.txt  package.xml
catkin_ws/src/cupinator/msg/: AggregationData.msg  Contour.msg  CtrlCommand.msg  CtrlStatus.msg  RoomScannerCommand.msg  RoomScannerResult.msg  SnapshotData.msg  WalkCommand.msg  WalkResult.msg
catkin_ws/src/cupinator/scripts/: CtrlNode.py  CupRec  CupRec.py  CupinatorCli.py  RoomScanner.py  Walk.py
catkin_ws/src/cupinator/scripts/cupRec/: SC.py
catkin_ws/src/cupinator/srv/: CtrlQuery.srv  CupRecQuery.srv  SingleCupRecQuery.srv
catkin_ws/src/cupinatorsim/: CMakeLists.txt  package.xml
catkin_ws/src/cupinatorsim/launch/: all.launch
catkin_ws/src/cupinatorsim/scripts/: RoomScannerSim.py  WalkerSim.py
catkin_ws/src/ric/pcloud_rot/: CMakeLists.txt  package.xml
catkin_ws/src/ric/pcloud_rot/src/: pcloud_rot.cpp
catkin_ws/src/ric/ric/: CMakeLists.txt  package.xml
catkin_ws/src/ric/ric_base_station/: CMakeLists.txt  package.xml
catkin_ws/src/ric/ric_description/: CMakeLists.txt  package.xml
catkin_ws/src/ric/ric_description/config/: ric_robot_control.yaml  ric_robot_control_1.yaml  ric_robot_control_2.yaml  ric_robot_control_3.yaml
catkin_ws/src/ric/ric_robot/: CMakeLists.txt  package.xml
cupScanner/: cupScanner.py  test.txt  test_single.py  utils.py
walkProx/: walkProx.py  walkProx.sh
(+59 files in other folders)
